final report and executive summary done

--- a/Trivedi_Meera_final_report.qmd
+++ b/Trivedi_Meera_final_report.qmd
@@ -1,8 +1,6 @@
 ---
-title: "Progress Memo 2"
-subtitle: |
-  | Final Project 
-  | Data Science 2 with R (STAT 301-2)
+title: "Predicting Tenant Satisfaction with Slovakian Apartments"
+subtitle: "Final Report"
 author: "Meera Trivedi"
 date: today
 
@@ -79,14 +77,14 @@ The target variable was originally intended to be the quality of living as a fac
 The cleaned data was split using stratified splitting by the target variable, satisfaction, and using an 80%/20% split because the dataset is fairly large. This is a common split to use with large datasets. This means 80% of the data goes into the training set and the other 20% goes into the testing set. 
 
 #### Resampling
-The data was resampling using V-fold cross validation with 10 folds and 5 repeats which will then result in 50 models per fit. I used this method of resampling instead of bootstrap resampling because that introduces the possibility of some observations in a bootstrap sample appearing multiple times with others not appearing at all. V-fold cross validation also has lower bias, and is more commonly used than bootstrap for big datasets. I used 10 fold and 5 repeats because they are common benchmark numbers and my computer could handle this much resampling. 
+The data was resampled using V-fold cross validation with 10 folds and 5 repeats which will then result in 50 models per fit. I used this method of resampling instead of bootstrap resampling because that would introduce the possibility of some observations in a bootstrap sample appearing multiple times with others not appearing at all. V-fold cross validation also has lower bias, and is more commonly used than bootstrap for big datasets. I used 10 fold and 5 repeats because they are common benchmark numbers and my computer could handle this much resampling. 
 
 #### Recipes
-Six recipes were used to create the models. Unfortunately multiple of my predictor variables had many missing values. They were added to the dataset as variables because a few apartments had data for them, but if most apartments don’t have data points for those variables, they can’t be useful predictors in a prediction model. As an example, one variable is about the type of energy certificate the apartment has but the most frequent value was “none” meaning that apartment didn’t have an energy certificate. This means having an energy certificate can’t be that useful of a predictor if the majority of apartments either don’t have a certificate or have a missing value for it. 
+Six recipes were used to create the models. Unfortunately multiple of my predictor variables had many missing values. They must have been added to the dataset as variables because a few apartments had data for them, but if most apartments don’t have data points for those variables, they can’t be useful predictors in a prediction model. As an example, one variable is about the type of energy certificate the apartment has but the most frequent value was “none” other than a missing value meaning that apartment didn’t have an energy certificate anyway. This means having an energy certificate can’t be that useful of a predictor if the majority of apartments either don’t have a certificate or have a missing value for it. 
 
-For simplicity, the basic recipes have all the variables with missing data removed, as well as the factor variables with many levels removed to avoid overfitting and overworking the computer. It imputes the area variable because there is only a small amount of missingness, so imputation would only be making up for a small percentage of the values. And it creates dummy variables for the nominal predictors, removes variables with zero variance, and centers and scales all predictors.
+For simplicity, the basic recipes have all the variables with missing data removed, as well as the factor variables with many levels removed to avoid overfitting and overworking the computer. It imputes the area variable because there is only a small amount of missingness, so imputation would only be making up for a small percentage of the values. And it creates dummy variables for the nominal predictors, removes variables with zero variance, and centers and scales all predictors. These are standard steps to take for a basic recipe.
 
-The main recipe does all of this as well except it does not remove all the variables with missingness, instead for two variables: the total floors the building has and the floor number the apartment is on, it mutates them to be factors with three levels, one level replaces missing values with the word “unknown”, since seeing something is unknown could be interesting instead of removing those observations entirely. These differences will help evaluate if knowing something is unknown is actually useful in making predictions. These two variables were chosen specifically to be mutated because they have about half of their values missing so this unknown level would have a lot of values but not so much that the variables should be considered totally unusable in all recipes.
+The main recipe does all of this as well except it does not remove all of the variables with missingness, instead for two variables: the total floors the building has and the floor number the apartment is on, it mutates them to be factors with three levels, one level replaces missing values with the word “unknown”, since seeing something is unknown could be interesting instead of removing those observations entirely. These differences will help evaluate if knowing something is unknown is actually useful in making predictions. These two variables were chosen specifically to be mutated because they have about half of their values missing so this unknown level would have a lot of values but not so much that the variables should be considered totally unusable in all recipes.
 
 The “interact” recipe builds on this recipe and additionally uses interaction terms to analyze the impact of them separately. EDA was conducted to understand the relationships between predictor variables to determine interaction terms. First I explored price (on a log 10 scale for visual purposes) by satisfaction by different levels of variables that represented rankings on different aspects of the apartment to see if there were differences in the satisfaction for each range. Every variable that represented ranking was factored and split into 3 equal levels (so if available values were from 4-99 each level was ⅓ of that range). There were considered to be clear differences in satisfaction if the level that had the most density for each range was different for the different ranges. This would mean that the different ranges could help contribute to determining satisfaction and so it would make sense to create an interaction term. This process was used to justify creating interaction terms for price and environment, price and relaxation ability, price and available services, and price and transportation services. Next, since I thought safety and environment could be related I explored their relationship by the two levels of satisfaction in the form of a faceted boxplot with environment factored with 5 equal levels and found that the distributions were quite different for the two levels of satisfaction especially between the middle two ranges of environment so it made sense to create an interaction term between safety and environment as well. Finally I explored the relationship between price and area since typically the bigger an apartment is the more expensive it is but found that the relationship did not differ much by satisfaction so I decided not to create an interaction term for this. So to conclude, I created 5 interaction terms based on this EDA, and the graphs can be found in the appendix. 
 
@@ -98,22 +96,23 @@ Since this is a classification problem, the models I will be creating will be: n
 #### Tuning Parameters
 The elastic net, nearest neighbors, random forest, and boosted tree models all use tuning.
 
-The elastic net model uses tuning for the mixture and penalty. The tuning ranges were updated so that the range of mixture is from 0 to 1. The lower bound is 0 because that would indicate a fully ridge model and the upper bound is 1 because that would indicate a fully lasso model, so the range for a combination of the two model types should be in between. The range of penalty is from -5 to 0.2. These numbers are including on log10 transformation so the real bounds would be 10^-5 to 10^0.2. I updated these values to shift the range higher than the default to test values that would have more impact than if they were more centered around 0. 
+The elastic net model uses tuning for the mixture and penalty. The tuning ranges were updated so that the range of mixture is from 0 to 1. The lower bound is 0 because that would indicate a fully ridge model and the upper bound is 1 because that would indicate a fully lasso model, so the range for a combination of the two model types should be in between. The range of penalty is from -5 to 0.2. These numbers are on log10 transformation so the real bounds would be 10^-5 to 10^0.2. This becomes important when looking at the optimal values of the hyperparameters later on. I updated these values to shift the range higher than the default to test values that would have more impact than if they were more centered around 0. 
 
 The nearest neighbor model uses tuning for the neighbors variable but it is my understanding that the default tuning range works well so there was no need to update it.
 
-The random forest model uses tuning for the minimal node size and number of sample predictors. The minimal node size is the minimum number of data points required for the node to be split further. Using tuning for these hyperparameters is helpful to improve the accuracy of these models. Since the default range of minimal node size works well there was no need to update it but the range of number of sample predictors was updated to 1 to 11 because we want the upper bound to be the maximum number of predictor variables that could be randomly drawn so the range includes all the predictor variables. Tuning was not used for the trees variable since we would want to use a fixed value: as high of a number as a computer could handle. Since 500 is the default and 1000 would be a lot, I used 750 since it is a benchmark value and the average between the two. 
+The random forest model uses tuning for the minimal node size and number of sample predictors. The minimal node size is the minimum number of data points required for the node to be split further. Using tuning for these hyperparameters is helpful to improve the accuracy of these models. Since the default range of minimal node size works well there was no need to update it but the range of the number of sample predictors was updated to be from 1 to 11 because we want the upper bound to be the maximum number of predictor variables that could be randomly drawn so the range includes all the predictor variables. Tuning was not used for the trees variable since we would want to use a fixed value: as high of a number as a computer could handle. Since 500 is the default and 1000 would be a lot, I used 750 since it is a benchmark value and the average between the two. 
 
-The boosted tree model uses tuning for number of sample predictors, minimal node size, and learning rate, which is a rate that the weak learners' predictions get scaled. The range of mtry was updated in the same way as for random forest and the range of min_n was not updated again. The range of learning rate was updated to (-5, -0.2) since the upper bound should be close to but less than 0 and lower ranges of learning rates are better when more trees are used to achieve the same level of fit. These numbers are including on log10 transformation so the real bounds would be 10^-5 to 10^-0.2. 
+The boosted tree model uses tuning for number of sample predictors, minimal node size, and learning rate, which is a rate that the weak learners' predictions get scaled. The range of number of sample predictors was updated in the same way as it was for the random forest model and the range of the minimal node size was not updated again. The range of learning rate was updated to (-5, -0.2) since the upper bound should be close to but less than 0 and lower ranges of learning rates are better when more trees are used to achieve the same level of fit. These numbers are including on log10 transformation so the real bounds would be 10^-5 to 10^-0.2 which again becomes important when looking at optimal values of hyperparameters later on. 
 
 
 #### Assessment Metrics
-Since this is a classification problem, the assessment metric will be the area under the ROC curve. The ROC curve shows the relationship between the true positive rate, sensitivity, and false positive rate, 1 - specificity for different thresholds of classification. It is a good measure to use for binary classification, in this case between satisfied and unsatisfied. The area under the curve can be from 0 to 1, with a higher measure indicating better performance. This is a good metric to use when there is imbalance in a dataset between levels of the target variable and since there seem to be noticeably more people satisfied with their apartments than not, this could be considered an imbalance.  
+Since this is a classification problem, the assessment metric will be the area under the ROC curve. The ROC curve shows the relationship between the true positive rate, sensitivity, and false positive rate, 1 - specificity, for different thresholds of classification. It is a good measure to use for binary classification, in this case between satisfied and unsatisfied. The area under the curve can be from 0 to 1, with a higher measure indicating better performance. This is a good metric to use when there is imbalance in a dataset between levels of the target variable and since there seem to be noticeably more people satisfied with their apartments than not, this could be considered an imbalance.  
 
 ## Models
 
 #### Basic Recipes
-First we can explore the 6 different model types fitted to the basic recipes. This table shows that in comparison to the null model all models have a higher measure of performance, meaning making complex models is useful in making more accurate predictions. In this case, the random forest model performs the best with a performance measure of 0.958, which is very close to 1. It also has the lowest standard error out of all the models except the null. Standard error is not the primary assessment metric here but this information is still interesting nonetheless. 
+
+First we can explore the 6 different model types fitted to the basic recipes. @tbl-basic shows the best hyperparameter values for the elastic net model. shows that in comparison to the null model all models have a higher measure of performance, meaning making complex models is useful in making more accurate predictions. In this case, the random forest model performs the best with a performance measure of 0.958, which is very close to 1. It also has the lowest standard error out of all the models except the null. Standard error is not the primary assessment metric here but this information is still interesting nonetheless. 
 ```{r}
 #| label: tbl-basic
 #| tbl-cap: Evaluation of six models on the basic recipes. 
@@ -142,7 +141,7 @@ metrics |>
 
 #### Main Recipes
 
-Next we can explore the 5 model types other than the null model on the main recipe. This table shows that the random forest model still performs better than the other models by having a much higher measure of performance of 0.956, which is very close to 1. It still has the lowest standard error out of all the models.
+Next we can explore the 5 model types other than the null model on the main recipe. @tbl-main shows the best hyperparameter values for the elastic net model. shows that the random forest model still performs better than the other models by having a much higher measure of performance of 0.956, which is very close to 1. It still has the lowest standard error out of all the models. The order of the models by best performance is the same as on the basic recipes. 
 ```{r}
 #| label: tbl-main
 #| tbl-cap: Evaluation of six models on the main recipes. 
@@ -168,8 +167,7 @@ metrics2 |>
 ```
 
 #### Interaction Recipes
-Finally we can explore the 5 models other than the null on the recipe that additionally includes interaction terms. This table shows that the random forest model still performs better than the other models by having a much higher measure of performance of 0.954, which is very close to 1. It still has the lowest standard error out of all the models.
-
+Finally we can explore the 5 models other than the null on the recipe that additionally includes interaction terms. @tbl-interact shows the best hyperparameter values for the elastic net model. shows that the random forest model still performs better than the other models by having a much higher measure of performance of 0.954, which is very close to 1. It still has the lowest standard error out of all the models. The order of the models by best performance is the same as on the basic and main recipes. 
 ```{r}
 #| label: tbl-interact
 #| tbl-cap: Evaluation of six models on the interaction recipes. 
@@ -205,7 +203,7 @@ load(here("final analysis/best hyperparameters/bestparams_rf.rda"))
 load(here("final analysis/best hyperparameters/bestparams_knn.rda"))
 ```
 ##### Random Forest & Boosted Tree
-It was definitely a good choice to set the range of number of sample predictors to include the maximum number of predictor variables because that value ended up being the best hyperparameter for the feature engineered recipes for both the random forest and boosted tree models. A good learning rate with a high number of trees should be close to 0 so it makes sense that the best value is close to 0.
+@tbl-rf and @tbl-bt show the best hyperparameter values for the random forest and boosted tree models respectively. It was definitely a good choice to set the range of number of sample predictors to include the maximum number of predictor variables because that value ended up being the best hyperparameter for the feature engineered recipes for both the random forest and boosted tree models. A good learning rate with a high number of trees should be close to 0 so it makes sense that the best value is close to 0. It would be interesting to test an even lower range to see if that would be more helpful. 
 ```{r}
 #| label: tbl-rf
 #| tbl-cap: Best hyperparameters for Random Forest models on all three tree recipes.
@@ -237,7 +235,7 @@ bestparams_bt |>
 
 
 ##### Nearest Neighbors
-A higher number of neighbors leads to stronger predictions because more neighbors handle outliers better; however a very high number of neighbors computational efficiency can decrease so it makes sense that the best values of neighbors for making predictions are numbers much greater than 1 but not very high numbers.
+@tbl-knn shows the best hyperparameter values for the nearest neighbors model. A higher number of neighbors leads to stronger predictions because more neighbors handle outliers better; however a very high number of neighbors computational efficiency can decrease so it makes sense that the best values of neighbors for making predictions are numbers much greater than 1 but not very high numbers.
 ```{r}
 #| label: tbl-knn
 #| tbl-cap: Best hyperparameters for Nearest Neighbors models on all three tree recipes.
@@ -251,7 +249,7 @@ bestparams_knn |>
 ```
 ##### Elastic Net
 
-It was really interesting that the best hyperparameter value for the mixture was consistently 0, meaning that a full ridge regression model indicated higher performance. The optimal value of penalty is on the higher end of the range from 10^-5 to 10^0.2. The optimal value being on the higher end of the range means that the model likely benefits from stronger regularization which controls overfitting and improves generalizability. 
+@tbl-en shows the best hyperparameter values for the elastic net model. It was really interesting that the best hyperparameter value for the mixture was consistently 0, meaning that a full ridge regression model indicated higher performance. It could be interesting in the future to split this up and explore ridge and lasso regression separately to see if this makes differences in performance. The optimal value of penalty is on the higher end of the range from 10^-5 to 10^0.2. The optimal value being on the higher end of the range means that the model likely benefits from stronger regularization which controls overfitting and improves generalizability. It might be interesting to test a range shifted a bit higher than this one in the future to see if that increases performance. 
 
 ```{r}
 #| label: tbl-en
@@ -272,7 +270,7 @@ bestparams_en |>
 
 #### Compare & Contrast
 
-Now that all the models have been built on various recipes we can compare their performances by recipe. This table shows that overall, the random forest model performs the best regardless of the recipe but that it performs better on the basic recipe than the ones that include more feature engineering. The same is true for the second-best performing model: the boosted tree. There is seemingly no difference that the interaction terms have made because the measure of performance is the same for both feature engineered recipes and the performance on the basic recipe is higher. On the next best performing model: nearest neighbors, the interaction terms do seem to have lead to a considerable increase in performance but the basic recipe still performs better. The only two lowest performing models other than the null: elastic net and logistic regression both had the more feature engineered recipe perform better than the basic recipe but by a very small difference and the recipe without interaction terms performs almost the same in both recipes. This has led me to conclude that overall, the interaction terms created did not help prediction and that handling missingness by keeping certain variables and using the fact that the value is unknown to help predict, was actually not useful in this case. We can mostly get a higher performing model by removing these variables with missingness instead of allowing that information to influence our predictions. It was an interesting idea to explore if missingness could be used to our advantage, but in this case it seems to be more useful to simply remove them. Overall, the model with the highest measure of the area under the ROC curve is the random forest model on the basic recipe and so that model performs the best and is selected as the final winning model. It is not surprising that this model performed the best since tuning and a fixed high number of trees was used to improve accuracy. 
+Now that all the models have been built on various recipes we can compare their performances by recipe. @tbl-comparison shows that overall, the random forest model performs the best regardless of the recipe but that it performs better on the basic recipe than the ones that include more feature engineering. The same is true for the second-best performing model: the boosted tree. There is seemingly no difference that the interaction terms have made because the measure of performance is the same for both feature engineered recipes and the performance on the basic recipe is higher. On the next best performing model: nearest neighbors, the interaction terms do seem to have lead to a considerable increase in performance but the basic recipe still performs better. The two lowest performing models other than the null: elastic net and logistic regression both had the more feature engineered recipe perform better than the basic recipe but by a very small difference and the recipe without interaction terms performs almost the same as the main for both model types This has led me to conclude that overall, the interaction terms created did not help prediction and that handling missingness by keeping certain variables and using the fact that the value is unknown to help predict, was actually not useful in this case. More of the time, we can get a higher performing model by removing these variables with missingness instead of allowing that information to influence our predictions. It was an interesting idea to explore if missingness could be used to our advantage, but in this case it seems to be more useful to simply remove them. Overall, the model with the highest measure of the area under the ROC curve is the random forest model on the basic recipe, and so that model performs the best and is selected as the final winning model. It is not surprising that this model performed the best since using tuning and a fixed high number of trees is designed to improve accuracy. 
 
 ```{r}
 #| label: tbl-comparison
@@ -308,7 +306,7 @@ metrics |>
 This section will assess the best model: the random forest on the basic recipe, in more detail. 
 
 #### ROC AUC & Accuracy
-This table shows two performance measures for the winning model, the primary one: area under the ROC curve and something more intuitive, accuracy. Like the area under the curve we want the accuracy to be closer to 1 than 0 since 1 would mean 100% accuracy and we'd like to get as close to that as possible. The fact that the accuracy is 0.917 is quite impressive, and means that this model does not perform perfectly but performs very well. The same logic is used to assess the area under the curve and its high value of 0.969 is quite impressive as well. 
+@tbl-roc_accuracy shows two performance measures for the winning model, the primary one: area under the ROC curve and something more intuitive, accuracy. Like the area under the ROC curve we want the accuracy to be closer to 1 than 0 since 1 would mean 100% accuracy and we'd like to get as close to that as possible. The fact that the accuracy is 0.917 is quite impressive, and means that this model performs very well. The same logic is used to assess the area under the curve and its high value of 0.969 is quite impressive as well.
 
 ```{r}
 #| label: tbl-roc_accuracy
@@ -329,19 +327,21 @@ accuracy_roc_auc |>
 ```
 
 #### ROC Curve
-Next, @fig-plot2 shows a visual representation of the ROC curve to better understand our assessment metric of the area under its curve. Since we want the area to be as big as it can be, we want the curve to be as close to almost outlining the top left corner of the graph as it can be. This is the case here, as it is clear that this ROC curve takes on that desired shape and has a very large area between it and the dotted line. This would mean a high true positive rate and a low false positive rate which means minimal error in prediction. 
+Next, @fig-plot2 shows a visual representation of the ROC curve to better understand our assessment metric of the area under its curve. Since we want the area to be as big as it can be, we want the curve to be as close to almost outlining the top left corner of the graph as it can be. This is the case here, as it is clear that this ROC curve takes on that desired shape and has a very large area between its border and the dotted line. This would mean a high true positive rate and a low false positive rate which means minimal error in prediction. 
 
 ![ROC Curve for the Winning Model](final analysis/results/roc_curve.png){#fig-plot2}
 
 
 #### Confusion Matrix 
-To further explore this model we can use a confusion matrix in @fig-bar2 to compare predictions to the accurate values. The top left is the number of correctly predicted satisfied apartment owners, 475, the bottom right is the number of correctly predicted unsatisfied apartment owners, 283. The bottom left is the number of wrongly predicted satisfied apartment owners as unsatisfied, only 12, and the top right is the number of wrongly predicted unsatisfied apartment owners as satisfied, 57. I am surprised that many more people who are unsatisfied with their apartment were incorrectly predicted than those who were really satisfied and wrongly predicted. 
+To further explore this model we can use the confusion matrix in @fig-bar2 to compare predictions to the accurate values. The top left is the number of correctly predicted satisfied apartment owners, 475, the bottom right is the number of correctly predicted unsatisfied apartment owners, 283. The bottom left is the number of wrongly predicted satisfied apartment owners as unsatisfied, only 12, and the top right is the number of wrongly predicted unsatisfied apartment owners as satisfied, 57. I am surprised that many more people who are unsatisfied with their apartment were incorrectly predicted than those who were really satisfied and wrongly predicted. 
 
 ![Confusion Matrix for the Winning Model](final analysis/results/conf_mat.png){#fig-bar2}
 
 Overall, this model is clearly pretty successful in its predictions as primarily shown by our primary assessment metric of the area under the ROC curve. It is performing much better than any of the other models so it can be concluded that it is worth it to build a more complex predictive model. 
 
 ## Conclusion
+
+In conclusion, there are a lot of different ways to build predictive models and a lot of different ways to go about feature engineering. On Kaggle, the author of this dataset posted a comment saying that this dataset is designed to be used to learn how to complete EDA and prediction models, which was the purpose of this project so it made sense that there was a lot of cleaning to be done. I began by using the quality of living as a target variable but the distribution was very bimodal with the highest density of values above 60 out of 100. So to combat this imbalance of data I used the values of this variable to calculate the satisfaction variable. It is now much easier to just classify someone as satisfied or unsatisfied and there is much less of an imbalance between the classes. Since I could only use observations that did not have missing values for my target variable, all observations with missing values for the quality of living variable needed to be filtered out, and unfortunately that cut down the dataset to only 4132 observations. Much of the raw dataset was not applicable to this prediction problem and even within this cleaned dataset, missingness was prevalent in a lot of variables. Many had over half of their values missing so it made sense to remove them, but for variables with around half or less than half I tried to combat it in a different way by utilizing missing values to our advantage and giving them their own unknown level. Perhaps keeping those variables and using the fact that values were unknown as another piece of information could have helped prediction, but in this case it didn’t make much of a difference. I was quite surprised because here in Evanston people tend to place importance in the size of their building and what floor they are on. I live on the top floor of my building and I would say that contributes to my satisfaction, but I guess in this case it was not as important in predicting satisfaction. I also have friends who live off campus and place importance in the height of their building as well, so I really thought these would be important predictors, but I guess including them to the best ability possible did not make much of a difference in performance. I am also surprised that creating interaction terms did not help performance much. I thought based on my EDA that some of the different correlations between variables could make a difference in performance but I guess not doing so helped prediction more in most cases. The main thing I learned from this is that part of feature engineering is learning when certain predictors are not helpful and that removing them sometimes is the best option to improve performance and model accuracy. I also learned that tuning models helps find the best values of hyperparameters to maximize model performance so it makes sense that those models performed better than the two models that were not tuned. Finally, I learned over the course of this quarter and through this project that random forest models often do well, even the relative best a lot of times! This is probably because setting a high number of trees improves accuracy in addition to tuning other hyperparameters. Something I would potentially want to explore in the future would be combining more of the factor variables into fewer levels that include ranges of factors. Including factor variables with too many levels can lead to overfitting which is partly why they were removed, a lot of them also had missingness, but throughout this project I learned how to combine levels into ranges so that might be an interesting thing to explore in a new recipe in the future. However since a lot of these factors had more missingness than the variables I mutated for this project that probably wouldn’t help too much but it would be worth a try! I am also curious to learn more about the different index variables. Exploring them for the EDA was really interesting and perhaps for a project more like last quarter’s I would be curious to explore all the relationships between variables. But that wouldn’t be relevant to the purpose of this project. I would also want to see some of the relationships between variables I had to remove from my recipe and my target variable out of curiosity. 
 
 ## References
 
